--- a/index.html
+++ b/index.html
@@ -95,11 +95,12 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup style="color:#005587;">1</sup>University of California, Los Angeles,</span><br>
+            <span class="author-block"><sup style="color:#005587;">1</sup>University of California, Los Angeles,</span>
             <span class="author-block"><sup style="color:#8C1515">2</sup>Stanford University</span>
             <span class="author-block"><sup style="color:#FF6C0C">3</sup>California Institute of Technology</span><br>
 
-            <span class="paper-block"><b >* Equal Contribution</b> </span>
+            <span class="paper-block"><b >* Equal Contribution</b> </span><br>
+            <span class="paper-block"><b >NeurIPS 2024 Accepted</b> </span>
           </div>
 
           <div class="column has-text-centered">
